Update to HTML files, remove shp dir

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>WebODM Data Processing Tests</title>
+<title></title>
 
 <script src="libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -66,6 +66,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="stitch_report.css" type="text/css" />
 
 </head>
 
@@ -115,25 +116,41 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">WebODM Data Processing Tests</h1>
 
 </div>
 
 
-<div id="treasure-island" class="section level1">
-<h1>Treasure Island</h1>
+<div id="webodm-data-processing---samples" class="section level1">
+<h1>WebODM Data Processing - Samples</h1>
+<div id="treasure-island" class="section level2">
+<h2>Treasure Island</h2>
 <ul>
-<li><p><a href="ti_2018-02-17_flt01_stch01.html" target="_blank">Flight 1, High Quality Preset</a></p></li>
-<li><p><a href="ti_2018-02-17_flt03_stch01.html" target="_blank">Flight 3, High Quality Preset</a></p></li>
+<li><p><a href="ti_2018-02-17_flt01_stch01.html" target="_blank">Treasure Island, Flight 1</a></p></li>
+<li><p><a href="ti_2018-02-17_flt03_stch01.html" target="_blank">Treasure Island, Flight 2</a></p></li>
 </ul>
 </div>
-<div id="el-dorado" class="section level1">
-<h1>El Dorado</h1>
-<p><em>coming soon</em></p>
+<div id="el-dorado-county" class="section level2">
+<h2>El Dorado County</h2>
+<ul>
+<li><p><a href="mg_2017-12-10_x3pass01ew_stch01.html" target="_blank">El Dorado Master Gardener Demo</a></p></li>
+<li><p><a href="gf_hr-holding-pen_2017-05-21_x5_stch01.html" target="_blank">Grizzly Flats Ranch - Holding Pen area</a></p></li>
+<li><p><a href="gf_hr-hilltop_2017-05-21_x5_stch01.html" target="_blank">Grizzly Flats Ranch - Hilltop area</a></p></li>
+</ul>
 </div>
-<div id="hopland" class="section level1">
-<h1>Hopland</h1>
-<p><em>coming soon</em></p>
+<div id="mendocino-county" class="section level2">
+<h2>Mendocino County</h2>
+<ul>
+<li><a href="hrec_watershed1_2017-01-16_x5_stch01.html" target="_blank">Hopland REC Watershed 1</a></li>
+</ul>
+</div>
+<div id="san-mateo-county" class="section level2">
+<h2>San Mateo County</h2>
+<ul>
+<li><a href="elkus_2017-04-19_hero4_stch01.html" target="_blank">Elkus Ranch</a></li>
+</ul>
+<hr style="height:5px; color:DarkGray; background-color:DarkGray;">
+<p><img src="images/webodm-logo_247x60.png" class="bottombar"/> <img src="images/pix4d-logo_82x54.png" class="bottombar"/> <img src="images/igis-logo_60x60.png" class="bottombar"/> <img src="images/sdsc-logo_239x60.png" class="bottombar"/></p>
+</div>
 </div>
 
 
