--- a/mg_2017-12-10_x3pass01ew_stch01.html
+++ b/mg_2017-12-10_x3pass01ew_stch01.html
@@ -195,7 +195,8 @@ $(document).ready(function () {
 </iframe>
 </div>
 
-
+<h2><br/>3D Mesh</h2>
+<div class="sketchfab-embed-wrapper"><iframe width="910" height="600" src="https://sketchfab.com/models/499c0267069e45f2b4045b2a69bbd239/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/models/499c0267069e45f2b4045b2a69bbd239?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Master Gardener Demo Garden</a> by <a href="https://sketchfab.com/andlyons?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">andlyons</a> on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a> </p> </div>
 
 
 </div>
