--- a/hrec_watershed1_2017-01-16_x5_stch01.html
+++ b/hrec_watershed1_2017-01-16_x5_stch01.html
@@ -195,8 +195,7 @@ $(document).ready(function () {
 </iframe>
 </div>
 
-
-
+<p style="text-align:left; font-size:120%;">See also: <a href="http://test.andylyons.org/potree142/hrec_watershed1_phodar.html" target="_blank"><b>Point Cloud</b></a></p>
 
 </div>
 
